--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
-ADD https://raw.githubusercontent.com/daws-84s/notes/refs/heads/main/session-03.txt /usr/share/nginx/html/index.html
-RUN chmod +r https://raw.githubusercontent.com/daws-84s/notes/refs/heads/main/session-03.txt
+ADD https://github.com/daws-84s/notes/blob/main/session-04.txt /usr/share/nginx/html/index.html
+RUN chmod +r https://github.com/daws-84s/notes/blob/main/session-04.txt
 CMD ["nginx", "-g", "daemon off;"]
